# streamhub

./: .gitignore  AUDIT-REPORT.md  CLAUDE.md  README.md  caitien.md  dev.ps1  discord_livestream_room.html
Backend/: config-sample.yaml  config.yaml  go.mod  go.sum
Backend/pkg/config/: config.go
Backend/pkg/postgres/: migrate.go  postgres.go
Backend/pkg/rtc/: errors.go
Backend/pkg/service/: auth.go  errors.go  interfaces.go  ioservice.go  localstore.go  pgstore.go  pgstore_hybrid.go  ratelimit.go  roomeventhub.go  roommanager.go  server.go  userauthservice.go  userstore.go  wire.go  wire_gen.go
Backend/test/userauth/: chat_test.go  flow_test.go  roompassword_test.go  userauthservice_test.go  userstore_test.go
Desktop/: package-lock.json  package.json  run_dev.ps1  setup.ps1  vite.config.js
Desktop/src-tauri/: Cargo.toml  tauri.conf.json
Desktop/src-tauri/capabilities/: default.json
Desktop/src-tauri/src/: dump_windows.rs  hide_infobar.rs  lib.rs  main.rs  screen_capture.rs
Frontend/: index.html  package-lock.json  package.json  streamhub_auth_cinematic.html  vite.config.js
Frontend/src/: i18n.js  main.js  style.css
Frontend/src/__tests__/: auth.test.js  connection-bars.test.js  egress.test.js  keyboard-shortcuts.test.js  notification-sounds.test.js  reactions.test.js  recording.test.js  room-features.test.js  room.test.js  screenshot.test.js
Frontend/src/components/: AppLogo.vue  AppTooltip.vue  AuthBrandPanel.vue  AuthInput.vue  AuthLayout.vue  AvatarPicker.vue  BaseDialog.vue  ConnectionBars.vue  DeleteRoomDialog.vue  DeviceSettings.vue  LanguageSwitcher.vue  LobbyPendingList.vue  NotificationDropdown.vue  NotificationSettingsPanel.vue  ParticipantAvatar.vue  ParticipantMoveDialog.vue  PreJoinScreen.vue  RoomBar.vue  RoomChat.vue  RoomCreateForm.vue  RoomJoinDialog.vue  RoomParticipants.vue  ScreenLayoutPicker.vue  ScreenPickerDialog.vue  ScreenShareGrid.vue  ScreenShareSpotlight.vue  (+7 more)
docs/: FEATURES.md  LIVEKIT_VUE3_REFERENCE.md
(+54 files in other folders)
