[package]
name = "stream-hub-desktop"
version = "0.1.0"
description = "Stream HUB Desktop Client"
authors = ["Stream HUB"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "stream_hub_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "stream-hub-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
  "protocol-asset",
  "devtools",
] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
